Fixed the NonConservativeIssue (cost miscalculation), cleaned up code